// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests movieSearch  render  component with mockStoreWithDates 1`] = `
<Connect(SeriesContainer)>
  <SeriesContainer
    filter={null}
    setMovies={[Function]}
  >
    <Connect(Header)>
      <Header
        dispatch={[Function]}
        filmsLength={0}
      >
        <div
          className="header"
        >
          <div
            className="header__wrapper"
          >
            <Logo>
              <span
                className="logo"
              >
                netflixroulette
              </span>
            </Logo>
            <Connect(FilterContainer)>
              <FilterContainer
                setSearchByGenre={[Function]}
                setSearchByTitle={[Function]}
                setSearchText={[Function]}
                setSortByRating={[Function]}
                setSortByRelease={[Function]}
              >
                <FilterComponent
                  getInputRef={[Function]}
                  onButtonClick={[Function]}
                  onButtonClickGenre={[Function]}
                  onButtonClickRating={[Function]}
                  onButtonClickRelease={[Function]}
                  onButtonClickTitle={[Function]}
                >
                  <div
                    className="filter"
                  >
                    <div
                      className="filter__top"
                    >
                      <span
                        className="filter__label"
                      >
                        Find your movie
                      </span>
                      <input
                        className="filter__input"
                        placeholder="Type your value"
                        type="text"
                      />
                      <div
                        className="filter__buttons"
                      >
                        <span
                          className="filter__buttonsLabel"
                        >
                          search by
                        </span>
                        <label
                          htmlFor="btnTitle"
                        >
                          <input
                            id="btnTitle"
                            name="search"
                            onClick={[Function]}
                            type="radio"
                          />
                          <span
                            className="filter__btn"
                          >
                            title
                          </span>
                        </label>
                        <label
                          htmlFor="btnGenre"
                        >
                          <input
                            id="btnGenre"
                            name="search"
                            onClick={[Function]}
                            type="radio"
                          />
                          <span
                            className="filter__btn"
                          >
                            genre
                          </span>
                        </label>
                      </div>
                      <Button
                        modifier="pink"
                        onButtonClick={[Function]}
                        selector="btnSearch"
                        size="big"
                        text="search"
                      >
                        <input
                          className="btn btn_pink btn_big"
                          id="btnSearch"
                          onClick={[Function]}
                          type="button"
                          value="search"
                        />
                      </Button>
                    </div>
                    <div
                      className="filter__btns"
                    >
                      <span
                        className="filter__value"
                        id="btnSortBy"
                      >
                        Sort by
                      </span>
                      <label
                        htmlFor="btnRelease"
                      >
                        <input
                          id="btnRelease"
                          name="sort"
                          onClick={[Function]}
                          type="radio"
                        />
                        <span
                          className="filter__value"
                        >
                          release date
                        </span>
                      </label>
                      <label
                        htmlFor="btnRating"
                      >
                        <input
                          id="btnRating"
                          name="sort"
                          onClick={[Function]}
                          type="radio"
                        />
                        <span
                          className="filter__value"
                        >
                          rating
                        </span>
                      </label>
                    </div>
                  </div>
                </FilterComponent>
              </FilterContainer>
            </Connect(FilterContainer)>
          </div>
          <div
            className="header__info"
          >
            <div>
              <span
                className="header__value"
                id="movieValue"
              >
                0
                 
                movies found
              </span>
            </div>
          </div>
        </div>
      </Header>
    </Connect(Header)>
    <Connect(MovieListComponent)>
      <MovieListComponent
        dispatch={[Function]}
        films={Array []}
      >
        <div
          className="movieList"
        />
      </MovieListComponent>
    </Connect(MovieListComponent)>
    <Footer>
      <div
        className="footer"
      >
        <Logo>
          <span
            className="logo"
          >
            netflixroulette
          </span>
        </Logo>
      </div>
    </Footer>
  </SeriesContainer>
</Connect(SeriesContainer)>
`;

exports[`tests movieSearch  render  component with mockStoreWithDates 2`] = `
<Connect(SeriesContainer)>
  <SeriesContainer
    filter={null}
    setMovies={[Function]}
  >
    <Connect(Header)>
      <Header
        dispatch={[Function]}
        filmsLength={2}
      >
        <div
          className="header"
        >
          <div
            className="header__wrapper"
          >
            <Logo>
              <span
                className="logo"
              >
                netflixroulette
              </span>
            </Logo>
            <Connect(FilterContainer)>
              <FilterContainer
                setSearchByGenre={[Function]}
                setSearchByTitle={[Function]}
                setSearchText={[Function]}
                setSortByRating={[Function]}
                setSortByRelease={[Function]}
              >
                <FilterComponent
                  getInputRef={[Function]}
                  onButtonClick={[Function]}
                  onButtonClickGenre={[Function]}
                  onButtonClickRating={[Function]}
                  onButtonClickRelease={[Function]}
                  onButtonClickTitle={[Function]}
                >
                  <div
                    className="filter"
                  >
                    <div
                      className="filter__top"
                    >
                      <span
                        className="filter__label"
                      >
                        Find your movie
                      </span>
                      <input
                        className="filter__input"
                        placeholder="Type your value"
                        type="text"
                      />
                      <div
                        className="filter__buttons"
                      >
                        <span
                          className="filter__buttonsLabel"
                        >
                          search by
                        </span>
                        <label
                          htmlFor="btnTitle"
                        >
                          <input
                            id="btnTitle"
                            name="search"
                            onClick={[Function]}
                            type="radio"
                          />
                          <span
                            className="filter__btn"
                          >
                            title
                          </span>
                        </label>
                        <label
                          htmlFor="btnGenre"
                        >
                          <input
                            id="btnGenre"
                            name="search"
                            onClick={[Function]}
                            type="radio"
                          />
                          <span
                            className="filter__btn"
                          >
                            genre
                          </span>
                        </label>
                      </div>
                      <Button
                        modifier="pink"
                        onButtonClick={[Function]}
                        selector="btnSearch"
                        size="big"
                        text="search"
                      >
                        <input
                          className="btn btn_pink btn_big"
                          id="btnSearch"
                          onClick={[Function]}
                          type="button"
                          value="search"
                        />
                      </Button>
                    </div>
                    <div
                      className="filter__btns"
                    >
                      <span
                        className="filter__value"
                        id="btnSortBy"
                      >
                        Sort by
                      </span>
                      <label
                        htmlFor="btnRelease"
                      >
                        <input
                          id="btnRelease"
                          name="sort"
                          onClick={[Function]}
                          type="radio"
                        />
                        <span
                          className="filter__value"
                        >
                          release date
                        </span>
                      </label>
                      <label
                        htmlFor="btnRating"
                      >
                        <input
                          id="btnRating"
                          name="sort"
                          onClick={[Function]}
                          type="radio"
                        />
                        <span
                          className="filter__value"
                        >
                          rating
                        </span>
                      </label>
                    </div>
                  </div>
                </FilterComponent>
              </FilterContainer>
            </Connect(FilterContainer)>
          </div>
          <div
            className="header__info"
          >
            <div>
              <span
                className="header__value"
                id="movieValue"
              >
                2
                 
                movies found
              </span>
            </div>
          </div>
        </div>
      </Header>
    </Connect(Header)>
    <Connect(MovieListComponent)>
      <MovieListComponent
        dispatch={[Function]}
        films={
          Array [
            Object {
              "budget": 0,
              "genres": Array [
                "string",
              ],
              "id": 1,
              "overview": "string",
              "poster_path": "string",
              "release_date": "string",
              "revenue": 0,
              "runtime": 0,
              "tagline": "string",
              "title": "string",
              "vote_average": 0,
              "vote_count": 0,
            },
            Object {
              "budget": 0,
              "genres": Array [
                "string",
              ],
              "id": 2,
              "overview": "string",
              "poster_path": "string",
              "release_date": "string",
              "revenue": 0,
              "runtime": 0,
              "tagline": "string",
              "title": "string",
              "vote_average": 0,
              "vote_count": 0,
            },
          ]
        }
      >
        <div
          className="movieList"
        >
          <MovieItem
            budget={0}
            genres={
              Array [
                "string",
              ]
            }
            id={1}
            key="1"
            overview="string"
            poster_path="string"
            release_date="string"
            revenue={0}
            runtime={0}
            tagline="string"
            title="string"
            vote_average={0}
            vote_count={0}
          >
            <div
              className="movieItem"
            >
              <div
                className="movieItem__img"
                style={
                  Object {
                    "backgroundImage": "url(string)",
                  }
                }
              />
              <div
                className="movieItem__info"
              >
                <div>
                  <h3
                    className="movieItem__title"
                  >
                    string
                  </h3>
                  <h4
                    className="movieItem__genre"
                  >
                    string
                  </h4>
                </div>
                <span
                  className="movieItem__year"
                >
                  stri
                </span>
              </div>
            </div>
          </MovieItem>
          <MovieItem
            budget={0}
            genres={
              Array [
                "string",
              ]
            }
            id={2}
            key="2"
            overview="string"
            poster_path="string"
            release_date="string"
            revenue={0}
            runtime={0}
            tagline="string"
            title="string"
            vote_average={0}
            vote_count={0}
          >
            <div
              className="movieItem"
            >
              <div
                className="movieItem__img"
                style={
                  Object {
                    "backgroundImage": "url(string)",
                  }
                }
              />
              <div
                className="movieItem__info"
              >
                <div>
                  <h3
                    className="movieItem__title"
                  >
                    string
                  </h3>
                  <h4
                    className="movieItem__genre"
                  >
                    string
                  </h4>
                </div>
                <span
                  className="movieItem__year"
                >
                  stri
                </span>
              </div>
            </div>
          </MovieItem>
        </div>
      </MovieListComponent>
    </Connect(MovieListComponent)>
    <Footer>
      <div
        className="footer"
      >
        <Logo>
          <span
            className="logo"
          >
            netflixroulette
          </span>
        </Logo>
      </div>
    </Footer>
  </SeriesContainer>
</Connect(SeriesContainer)>
`;
